# MLOps_linux

./: .coverage  pyproject.toml
.github/workflows/: tests.yaml
dockerfiles/: train.dockerfile
mnist_linux/: LICENSE  README.md  data.py  pyproject.toml  tasks.py  test_training.py
mnist_linux/lightning_logs/checkpoints/: mnist-epoch=00-val_accuracy=0.92-v1.ckpt  mnist-epoch=00-val_accuracy=0.92-v2.ckpt  mnist-epoch=00-val_accuracy=0.92.ckpt  mnist-epoch=00-val_accuracy=0.93-v1.ckpt  mnist-epoch=00-val_accuracy=0.93.ckpt
mnist_linux/lightning_logs/lightning_logs/version_3/: metrics.csv
mnist_linux/models/: model.pth
mnist_linux/src/mnist_linux_proj/: data.py  model.py  train.py  visualize.py
mnist_linux/tests/: __init__.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20260111_121032-in60ylza/: run-in60ylza.wandb
wandb/run-20260111_121032-in60ylza/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260111_122546-x2p5gnfd/: run-x2p5gnfd.wandb
wandb/run-20260111_123303-wu19mtbn/: run-wu19mtbn.wandb
wandb/run-20260111_123735-sd74m2ib/: run-sd74m2ib.wandb
wandb/run-20260111_123735-sd74m2ib/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260111_125429-h5kj6bz0/: run-h5kj6bz0.wandb
wandb/run-20260111_125429-h5kj6bz0/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260111_130115-z2v4k7c6/: run-z2v4k7c6.wandb
wandb/run-20260111_130115-z2v4k7c6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+2 files in other folders)
