[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.14.0"
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
